@@ -15,8 +15,9 @@ class PolishNotationTest {
 
     @Test
     void checkTokens(){
-        assertEquals(3, evalRPN(Arrays.asList("2","1","+")));
-        assertEquals(12, evalRPN(Arrays.asList("3","4","*")));
+        assertEquals(0, evalRPN(List.of("0")));
+        assertEquals(2, evalRPN(Arrays.asList("2","1","*")));
+        assertEquals(7, evalRPN(Arrays.asList("3","4","+")));
         assertEquals(1, evalRPN(Arrays.asList("6","5","-")));
         assertEquals(2, evalRPN(Arrays.asList("14","7","/")));
         assertEquals(9, evalRPN(Arrays.asList("2","1","+","3","*")));
